--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,4 @@
-fastapi
-uvicorn[standard]
-tensorflow
-pillow
-firebase-admin
-requests
-numpy
+fastapi==0.116.0
+uvicorn[standard]==0.24.0
+firebase-admin==6.1.1
+python-multipart==0.0.6   # if you handle file uploads
