--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.116.0
-uvicorn[standard]==0.24.0
-firebase-admin==6.1.1
 python-multipart==0.0.6   # if you handle file uploads
+fastapi==0.116.0
+uvicorn==0.24.0
+firebase-admin==7.1.0
