--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-python-multipart==0.0.6   # if you handle file uploads
 fastapi==0.116.0
-uvicorn==0.24.0
-firebase-admin==7.1.0
+uvicorn[standard]==0.24.0
+tensorflow==2.18.1
+Pillow==10.1.0
+numpy==1.26.0
+firebase-admin==6.1.0
+requests==2.31.0
+python-multipart==0.0.6
